--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Fatima</title>
+    <!-- <link rel="stylesheet" href="/css/reset.css"> -->
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/app.js"></script>
+    
 </head>
 
 <body>
@@ -64,6 +65,7 @@
     <footer>
         <span>© Copyright 2020 201d11Fatima. All rights reserved. </span>
     </footer>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
