--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>About Fatima</title>
     <!-- <link rel="stylesheet" href="/css/reset.css"> -->
     <link rel="stylesheet" href="css/style.css">
-    
+
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#biography">Biography</a></li>
                 <li><a href="#education">Education</a></li>
-                <li><a href="#goals">Goals</a></li>
+                <li><a href="#top10">Top 10</a></li>
             </ul>
         </nav>
         <div class="welcome">
@@ -35,7 +35,8 @@
             <h2>My Biography</h2>
             <p>I am a recent Software Engineering graduate.</p>
             <p>I am a proud female, I always seek new challenges, I'm open to other's perspictives, I'm a critical
-                thinker, I am a strong advocate for children rights, I'm interesetd in linguistics science and I love strawberries!</p>
+                thinker, I am a strong advocate for children rights, I'm interesetd in linguistics science and I love
+                strawberries!</p>
             <p>Here are some information about me:</p>
             <p>1. Purple is my favorite color</p>
             <p>2. Machine Learning is my scientific field of interest</p>
@@ -52,14 +53,34 @@
             <p>Most of my certifications are related to Machine Learning and Data Science.</p>
             <p>I want to improve my web development skills and this is why I joined ASAC.</p>
             <p>Currently preparing for Microsoft Azure Fundamentals certification exam.</p>
-            <p>You can view my resume from <a href="https://drive.google.com/file/d/1Z2aqXr2m8YELj_OYcjXkE3u5SyLuOS31/view?usp=sharing">here</a></p>
+            <p>You can view my resume from <a
+                    href="https://drive.google.com/file/d/1Z2aqXr2m8YELj_OYcjXkE3u5SyLuOS31/view?usp=sharing">here</a>
+            </p>
         </div>
 
-        <div id="goals">
+        <!-- <div id="goals">
             <h2>My Goals</h2>
             <p>- My main goal for now is developing the web developer sense and skills.</p>
             <p>- Increasing my ML knowledge.</p>
             <p>- Learning Spanish and French.</p>
+        </div> -->
+
+        <div id="top10">
+            <h2>Top 10 places</h2>
+            <ol>
+                <li>New York City</li>
+                <li>London</li>
+                <li>California</li>
+                <li>Sydney</li>
+                <li>Tokyo</li>
+                <li>Marrakesh</li>
+                <li>Toronto</li>
+                <li>Fiordland National Park</li>
+                <li>Barcelona</li>
+                <li>Rainbow Mountains</li>
+            </ol>
+
+
         </div>
     </main>
     <footer>
