New update Oct8th

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <footer>
         <span>© Copyright 2020 201d11Fatima. All rights reserved. </span>
     </footer>
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script> -->
 </body>
 
 </html>
